# Windows-CalcEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build-for-testing  cmake_install.cmake  includes  install_manifest.txt
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-release/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-release/googletest-download/GTestExternal-prefix/src/GTestExternal-stamp/: GTestExternal-gitinfo.txt  GTestExternal-patch-info.txt  GTestExternal-update-info.txt
build-release/googletest-download/GTestExternal-prefix/tmp/: GTestExternal-gitclone.cmake  GTestExternal-mkdirs.cmake
googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/GTestExternal-prefix/src/GTestExternal-stamp/: GTestExternal-gitclone-lastrun.txt  GTestExternal-patch-info.txt  GTestExternal-update-info.txt
googletest-download/GTestExternal-prefix/tmp/: GTestExternal-gitclone.cmake  GTestExternal-mkdirs.cmake
src/MultiLayerOptics/src/: MultiLayerScattered.cpp
src/Tarcog/src/: IGU.cpp  SurfacesManager.cpp
